syntax = "proto3";
package virt.html;

message Bounds {
  float x = 1;
  float y = 2;
  float width = 3;
  float height = 4;
}

message NodeMedata {
  optional Bounds bounds = 1;
}

message Element {
  string tag_name = 1;
  optional string source_id = 2;
  repeated Attribute attributes = 3;
  optional NodeMedata metadata = 4;
  repeated Node children = 5;
}

message Attribute {
  optional string source_id = 1;
  string name = 2;
  string value = 3;
}

message TextNode {
  optional string source_id = 1;
  string value = 2;
  optional NodeMedata metadata = 3;
}

message Document {
  optional string source_id = 1;
  repeated Node children = 2;
}

message Node {
  oneof value {
    Element element = 1;
    TextNode text_node = 2;
  }
}